Fix crash when open new tab from eol notification in guest session

Bug: 809271
Change-Id: I769b03038509625eeade3fb4787d0d73ff105f03
Reviewed-on: https://chromium-review.googlesource.com/924755
Reviewed-by: Stefan Kuhne <skuhne@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Xiaoyin Hu <xiaoyinh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538477}
Former-commit-id: 3327cfed3f0a3d7dca70057cafa0d271e20daeff